# Qt-Cmake-Example

./: CMakeLists.txt
Socks-Alice/: CMakeLists.txt  main.cpp
Socks-Bob/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  add.h
